[project]
name = "osc-dm-monitor-srv"
dynamic = ["version"]
description = "Ecosystem Platform Monitor."
authors = [
  { name = "Eric Broda", email = "93649628+ModeSevenIndustrialSolutions@users.noreply.github.com" },
  { name = "Graeham Broda", email = "93649628+ModeSevenIndustrialSolutions@users.noreply.github.com" },
  { name = "Davis Broda", email = "93649628+ModeSevenIndustrialSolutions@users.noreply.github.com" },
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["Climate", "ITR", "Finance"]

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.9",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
  "annotated-types==0.6.0",
  "anyio==4.3.0",
  "certifi==2024.2.2",
  "click==8.1.7",
  "dnspython==2.6.1",
  "email_validator==2.1.1",
  "fastapi==0.111.0",
  "fastapi-cli==0.0.3",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httptools==0.6.1",
  "httpx==0.27.0",
  "idna==3.7",
  "Jinja2==3.1.4",
  "markdown-it-py==3.0.0",
  "MarkupSafe==2.1.5",
  "mdurl==0.1.2",
  "orjson==3.10.3",
  "pydantic==2.7.1",
  "pydantic_core==2.18.2",
  "Pygments==2.18.0",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.9",
  "PyYAML==6.0.1",
  "rich==13.7.1",
  "shellingham==1.5.4",
  "sniffio==1.3.1",
  "starlette==0.37.2",
  "typer==0.12.3",
  "typing_extensions==4.11.0",
  "ujson==5.9.0",
  "uvicorn==0.29.0",
  "uvloop==0.19.0",
  "watchfiles==0.21.0",
  "websockets==12.0"
]

[tool.setuptools.package-data]
itr = [
      "py.typed", "types-PyYAML"
      ]

[project.urls]
Homepage = "https://github.com/os-climate/osc-dm-monitor-srv"
Repository = "https://github.com/os-climate/osc-dm-monitor-srv"
Downloads = "https://github.com/os-climate/osc-dm-monitor-srv/releases"
"Bug Tracker" = "https://github.com/os-climate/osc-dm-monitor-srv/issues"
Documentation = "https://github.com/brodagroupsoftware/osc-dm-mesh-doc"
"Source Code" = "https://github.com/os-climate/osc-dm-monitor-srv"

[build-system]
requires = ["pdm-backend", "types-PyYAML"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
pre_release = "scripts/dev-versioning.sh"
release = "scripts/release-versioning.sh"
test = "pytest"
tox = "tox"
docs = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"
complete = { call = "tasks.complete:main", help = "Create autocomplete files for bash and fish" }

[tool.pdm.dev-dependencies]
test = ["pdm[pytest]", "pytest-cov"]
tox = ["tox", "tox-pdm>=0.5"]
docs = ["sphinx>=7.2.6", "sphinx-copybutton>=0.5.2"]
dev = ["tox>=4.11.3", "tox-pdm>=0.7.0"]
lint = ["pre-commit"]

[tool.pytest.ini_options]
testpaths = [
    "test/",
]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 70"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = "120"
extend-ignore = [
  "E501",
]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["test/*"]
# relative_files = true
